--- a/IMIIA- A1/HTMLfolder/blogs.html
+++ b/IMIIA- A1/HTMLfolder/blogs.html
@@ -28,11 +28,11 @@
 
     <h1>Blogs</h1>
     <p>
-Blog posts for the website witll go here and stuff.
+Blog posts for the website will go here and stuff.
 make sure to like wirte a bunch of stuff and words blah blah blah.
     </p>
  <ul>
-                <li><a href="/HTMLfolder/blogs/blog1.html" class="active">Blog Post 1: Intro</a></li>
+                <li><a href="/IMIIA- A1/HTMLfolder/blogs/blog1.html" class="active">Blog Post 1: Intro</a></li>
                 <li><a href="/HTMLfolder/blogs/blog2.html" class="active">Blog post 2:</a></li>
                 <li><a href="/HTMLfolder/blogs/blog2.html" class="active">Blog Post 3:</a></li>
                 
