--- a/IMIIA- A1/HTMLfolder/design.html
+++ b/IMIIA- A1/HTMLfolder/design.html
@@ -57,18 +57,23 @@
     <article>
     <h3>Design choices:</h3>
 
+    <!--Fix the text between the wireframes between further and interations-->
+
     <h4>Wireframes:</h4>
     <p>
     -The wireframe designs are very basic and simple now, not much thought and designs were thought of during the planning stages of the project.
     -For each page I only have one design because I'm only working with HTML and have no added styling yet. 
     -I have also decided to include additional wireframes for certain sections to show that these will be a part of the first iteration process once we start using CSS and including JavaScript as my ideas do include those two languages.
     -I wanted to keep the wireframes very basic now so that it is quite easy to navigate the website. These wireframes will change with further iterations.
-    
-    <img src="/Imgs/HomeWF.png" style="width: 80%" />
-    <img src="/Imgs/Assignment 1- HTML website(Design).png" style="width: 80%" />
-    <img src="/Imgs/Blog WF.png" style="width: 80%" />
-    <img src="/Imgs/PortfolioWF.png" style="width: 80%" />
-    <img src="/Imgs/ProfileWF.png" style="width: 80%" />
+</p>
+    <img src="/IMIIA- A1/Imgs/Assignment 1- HTML website(Design).png" style="width: 80%" />
+    <img src="/IMIIA- A1/Imgs/Blog WF.png" style="width: 80%" />
+    <img src="/IMIIA- A1/Imgs/HomeWF.png" style="width: 80%" />
+    <img src="/IMIIA- A1/Imgs/PortfolioWF.png" style="width: 80%" />
+    <img src="/IMIIA- A1/Imgs/ProfileWF.png" style="width: 80%" />
+    <img src="/IMIIA- A1/Imgs/Wireflow.png" style="width: 80%" />
+
+   
 
     <h4>Fonts:</h4>
     <p>
@@ -84,15 +89,16 @@
     I have 6 colour palettes which I used a generator to generate. I tried playing around with bright colours, dark colours and neutrals as well.
     Neutral colours seem to look more aesthetically pleasing for the look that I want to go for. From the websites I have engaged with, neutral colours look good and attract attention in a minimalist manner which is what I would like for my website. On the left are examples of websites I've engaged with that use a neutral colour palette.
     A neutral colour palette also tends to be more accessible in terms of colour blindness and it in a way avoids using colours that are either too dark or too light. 
-   
-    <img src="/Imgs/Colour palette one.png" style="width: 60%" />
-    <img src="/Imgs/colour palette 2.png" style="width: 60%" />
-    <img src="/Imgs/colour palette 3.png" style="width: 60%" />
-    <img src="/Imgs/colour palette 4.png" style="width: 60%" />
-    <img src="/Imgs/colour palette 5.png" style="width: 60%" />
-    <img src="/Imgs/colour palette 6.png" style="width: 60%" />
+</p>
 
-    </p>
+    <img src="/IMIIA- A1/Imgs/Colour palette one.png" style="width: 60%" />
+    <img src="/IMIIA- A1/Imgs/colour palette 2.png" style="width: 60%" />
+    <img src="/IMIIA- A1/Imgs/colour palette 3.png" style="width: 60%" />
+    <img src="/IMIIA- A1/Imgs/_colour palette 4.png" style="width: 60%" />
+    <img src="/IMIIA- A1/Imgs/colour palette 5.png" style="width: 60%" />
+    <img src="/IMIIA- A1/Imgs/Colour palette 6.png" style="width: 60%" />
+
+    
     </article>
    </section>
 </body>
