meta tags update

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Fefe's portfolio website">
+    <meta name="description" content ="Homepage">
+    <meta name="author" content="Ofentse Magabeane">
+
     <title>HomePage</title>
 
 
@@ -13,6 +17,7 @@
         </script>
 
 </head>
+
 <body>
     <header>
         
