--- a/HTML/essays.html
+++ b/HTML/essays.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Fefe's portfolio website">
+    <meta name="description" content ="Essays">
+    <meta name="author" content="Ofentse Magabeane">
     <title>Essays</title>
 </head>
 <header>
