--- a/HTML/portfolio.html
+++ b/HTML/portfolio.html
@@ -3,21 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Fefe's portfolio website">
+    <meta name="description" content ="Portfolio Homepage">
+    <meta name="author" content="Ofentse Magabeane">
     <title>Portfolio</title>
+
+    <script type="module">
+        import { initialise } from "../JS/menu.js"
+        initialise("Home");
+        </script>
+
 </head>
 <body>
     <header>
-        <nav>
-             <!--The code below is a container for all the hyperlink
-      that will be shown on my homepage-->
-            <ul>
-                <li><a href="" class="active">Home</a></li>
-                <li><a href="" class="active">Blog</a></li>
-                <li><a href="" class="active">Essays</a></li>
-                <li><a href="" class="active">Profile</a></li>
-                <li><a href="" class="active">Design</a></li>
-              </ul>
-        </nav>
+        <h1> Portfolio: </h1>
+       <p> Content loading I guess...</p>
     </header>
 
 </body>
