Nav links still not working?

--- a/index.html
+++ b/index.html
@@ -11,10 +11,7 @@
     <title>HomePage</title>
 
 
-    <script type="module">
-        import { initialise } from "../JS/menu.js"
-        initialise("Home");
-        </script>
+    <script type="module" src="JS/menu.js"></script>
 
 </head>
 
