--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>HomePage</title>
 
 
-    <script type="module" src="JS/menu.js"></script>
+    <script type="module" src="./JS/menu.js"></script>
 
 </head>
 
