--- a/HTML/blog.html
+++ b/HTML/blog.html
@@ -5,15 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog</title>
 
-    <script type="module">
-        import { initialise } from "JS/menu.js"
-        initialise("Home");
-        </script>
+    <script type="module"> import { initialise } from "./JS/menu.js"
+        initialise("Blog") </script>
+
 </head>
 <body>
 
     <header>
-        
+        <nav>
+            
+        </nav>
     </header>
 
     <section>
