--- a/HTML/essays.html
+++ b/HTML/essays.html
@@ -7,18 +7,13 @@
     <meta name="description" content ="Essays">
     <meta name="author" content="Ofentse Magabeane">
     <title>Essays</title>
+
+    <script type="module"> import { initialise } from "./JS/menu.js"
+        initialise("Home") </script>
 </head>
 <header>
     <nav>
-         <!--The code below is a container for all the hyperlink
-  that will be shown on my homepage-->
-        <ul>
-            <li><a href="" class="active">Home</a></li>
-            <li><a href="" class="active">Blog</a></li>
-            <li><a href="" class="active">Design</a></li>
-            <li><a href="" class="active">Profile</a></li>
-            <li><a href="" class="active">Portfolio</a></li>
-          </ul>
+  
     </nav>
 </header>
 
