--- a/HTML/essays.html
+++ b/HTML/essays.html
@@ -9,7 +9,7 @@
     <title>Essays</title>
 
     <script type="module"> import { initialise } from "./JS/menu.js"
-        initialise("Home") </script>
+        initialise("Essays") </script>
 </head>
 <header>
     <nav>
