--- a/HTML/profile.html
+++ b/HTML/profile.html
@@ -6,20 +6,19 @@
     <meta name="description" content="Fefe's portfolio website">
     <meta name="description" content ="Profile">
     <meta name="author" content="Ofentse Magabeane">
+
     <title>Profile</title>
+
+    <script type="module">
+        import { initialise } from "../JS/menu.js"
+        initialise("Profile");
+        </script>
 </head>
 <body>
     <header>
         <nav>
              <!--The code below is a container for all the hyperlink
       that will be shown on my homepage-->
-            <ul>
-                <li><a href="" class="active">Home</a></li>
-                <li><a href="" class="active">Blog</a></li>
-                <li><a href="" class="active">Essays</a></li>
-                <li><a href="" class="active">Design</a></li>
-                <li><a href="" class="active">Portfolio</a></li>
-              </ul>
         </nav>
     </header>
 
