profile and onclick function

--- a/HTML/profile.html
+++ b/HTML/profile.html
@@ -11,7 +11,7 @@
 
     <script type="module">
         import { initialise } from "../JS/menu.js"
-        initialise("Profile");
+        initialise("Home");
         </script>
 </head>
 <body>
@@ -28,9 +28,19 @@
 
         <img src="" style="width: 80%" />
 
-        <button onclick="changeText()">Click Me</button></p>
+        <article>
+            Heyyy there!! I’m Ofentse Magabeane but I like to go by Fefe
+            I am a game designer, and web developer- I eat, breathe, and sleep UI/UX. 
+            In short, I like making things look pretty but also functional. 
+            Did I mention I’m a stellar athlete too?
 
-       <div id="myDIV">Hello</div>
+        </article>
+        
+        <br>
+
+        <p> What else about me??</p>
+        <button onclick="changeText()">Click here to find out...</button></p>
+       <div id="myDIV">I like Puppies</div>
 
         <aside>
             
