--- a/HTML/design.html
+++ b/HTML/design.html
@@ -82,7 +82,7 @@
         A neutral colour palette also tends to be more accessible in terms of colour blindness and it in a way avoids using colours that are either too dark or too light. 
     </p>
     
-        <img src="IMGS/Colour palette one.png" style="width: 60%" />
+        <img src="../IMGS/Colour palette one.png" style="width: 60%" />
         <p> Colour Palette 1</p>
         <img src="/IMGS/colour palette 2.png" style="width: 60%" />
         <p> Colour Palette 2</p>
