--- a/HTML/essays.html
+++ b/HTML/essays.html
@@ -8,12 +8,14 @@
     <meta name="author" content="Ofentse Magabeane">
     <title>Essays</title>
 
-    <script type="module"> import { initialise } from "./JS/menu.js"
-        initialise("Essays") </script>
+    <script type="module"> import { initialise } from "../JS/menu.js"
+        initialise("Home") </script>
 </head>
+
 <header>
     <nav>
-  
+  <!--The code below is a container for all the hyperlink
+    - reference: menu.js-->
     </nav>
 </header>
 
