--- a/HTML/blog.html
+++ b/HTML/blog.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog</title>
 
-    <script type="module"> import { initialise } from "./JS/menu.js"
+    <script type="module"> import { initialise } from "../JS/menu.js"
         initialise("Blog") </script>
 
 </head>
@@ -13,7 +13,7 @@
 
     <header>
         <nav>
-            
+
         </nav>
     </header>
 
