--- a/HTML/design.html
+++ b/HTML/design.html
@@ -3,8 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Fefe's portfolio website">
+    <meta name="description" content ="Design">
+    <meta name="author" content="Ofentse Magabeane">
     <title>Design</title>
+
+    <script type="module">
+        import { initialise } from "../JS/menu.js"
+        initialise("Home");
+        </script>
+
 </head>
+
 <body>
     <header>
         <nav>
