--- a/HTML/blog.html
+++ b/HTML/blog.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Fefe's portfolio website">
+    <meta name="description" content ="Blogs">
+    <meta name="author" content="Ofentse Magabeane">
     <title>Blog</title>
 
     <script type="module"> import { initialise } from "../JS/menu.js"
-        initialise("Blog") </script>
+        initialise("Home") </script>
 
 </head>
 <body>
