--- a/HTML/portfolio.html
+++ b/HTML/portfolio.html
@@ -10,7 +10,7 @@
 
     <script type="module">
         import { initialise } from "../JS/menu.js"
-        initialise("Portfolio");
+        initialise("Home");
         </script>
 
 </head>
