--- a/HTML/portfolio.html
+++ b/HTML/portfolio.html
@@ -16,6 +16,12 @@
 </head>
 <body>
     <header>
+
+        <nav>
+             <!--The code below is a container for all the hyperlink
+    - reference: menu.js-->
+        </nav>
+        
         <h1> Portfolio: </h1>
        <p> Content loading I guess...</p>
     </header>
