--- a/HTML/essays.html
+++ b/HTML/essays.html
@@ -21,44 +21,54 @@
 <body>
     <h1>Essay 1: UI/UX analysis</h1>
     <article>
-The point of communication and interaction between a human and a computer in a device is called the user interface. Creating software or computerized device interfaces with an emphasis on aesthetics is known as user interface (UI) design in the design community.
+
+<p>The point of communication and interaction between a human and a computer in a device is called the user interface. Creating software or computerized device interfaces with an emphasis on aesthetics is known as user interface (UI) design in the design community.
 User Experience refers to how a user interacts with and experiences a product, system, or service.
 Both User experience and user experience structure the interaction of software and they both show to be an important factor in the design process as well as how users receive a digital product. UI and UX are a significant piece in how interaction is designed. As ethics presents itself more in design, we can now relate all three topics and speak to how ethics can or may affect interaction design.
 In this essay, a detailed analysis of UI/UX will be presented as well as a discussion around the ethics of interaction design. The BBD software website will be used as an example for the analysis and figures with notes will be used to assist with the discussion. The essay will define the following: interaction, and ethics as well as further discuss UI and UX and how all three relate to/ and work together in the design process to ultimately produce a digital product that users can interact with from a design point of view. Articles from various academics will be used to help further discuss points surrounding the topic.
+</p>
+
+<p>
 Interaction refers to reciprocal action or influence. “Interaction: It's the meeting point between an active body and something that it can affect in some way” Bardin, R. (2023)” (Geyser, 2024. Pg 2). We can understand that interaction happens when two subjects communicate with each other to produce an outcome of some sort. A significant part of the vast field of user experience (UX) design is interaction design. Without interaction design there would not necessarily be interaction and without interaction there would not be a functional digital product that users can interact with.
 Design that is human-centred, accessible, protects data privacy and opposes manipulative tendencies is referred to as ethical design. In Sanju Ahuja and Jyoti Kumar’s article discussing ethics in UX design, addressing the ethics of persuasive design, Anhuja and Jyoti note “With the goals of boosting user engagement, obtaining user data, and boosting revenue, persuasion has become a common tool in interactive systems.” (Anhuja and Jyoti, 2011. pg1). This takes note of the fact that persuasive design has become a big/ important aspect of UX design, and it has also exposed some “ethical concerns”. 
+</p>
 
-"Dark patterns," or 'dark' persuasion methods, have been more prevalent in recent years (Brignull 2010). Interface designs that aim to influence or force users to act against their will or in ways that are not in their best interests are referred to as "dark patterns."
+<p>"Dark patterns," or 'dark' persuasion methods, have been more prevalent in recent years (Brignull 2010). Interface designs that aim to influence or force users to act against their will or in ways that are not in their best interests are referred to as "dark patterns."
 (Anhuja and Jyoti, 2022). This is a point that Goethe, Niksirat, Hirskyj-Douglas, Sun, Law and Ren mention in their article From UX to Engagement: Connecting Theory and Practice, Addressing Ethics and Diversity. ‘Dark patterns’ do then affect a user’s autonomy (the capacity to use a product, service, or interface in a way that respects one's priorities and tastes) Some websites expose the ‘dark patterns’ while others do display some kind of ethical design, as they show some consideration for a user’s autonomy.
 A website that will be analysed is the BBD software company website. BBD Software is a software development company that offers software engineering services, cloud enablement, solution support and digital enablement services. The company runs their website, and the website provides information that the user needs to understand and engage with what it offers. The analysis will begin with the user interface, the website provides a clear interface with which users can interact with. In his article Factors Affecting Webpage’s Visual Interface Design and style, Hsu addresses “the visual communication-oriented method to determine the additional value that the visual interface style brings to its rating in order to comprehend the design standards and key elements that shaped various visual interface styles.” (Hsu, 2011, pg. 1).
  The BBD Software website does a great job in communicating visual cues to direct the user on how the website works while also allowing the user to explore the website how they would like to, giving them some autonomy, an example of this is the navigation on the home page. Users have options to choose from in terms of navigating the different pages, visual cues we can see are the hyperlink colour changing when you hover them and the mouse cursor changing to show that you can click on it:
- 
- <img src="" style="width: 80%" />
-<br>
+</p>
+
+ <img src="/IMGS/Screenshot (24).png" alt= "Screenshot of BBD web" style="width: 80%" />
+
+<p>
  The figure above the two screenshots of how the navigation behaves: in the first screenshot we see drop-down menus which act as a visual cue that the user can use to navigate that section, they would not have to click the ‘What we do’ hyperlink to eventually get to what they are looking for. Another way it behaves is the user can directly click on the hyperlink. The ‘contact’ link does not present a drop-down meaning that the user would have to click the link to go to the explore page.
 “The visual interface serves as a communication window between users and the website in addition to being in direct contact with them.” (Hsu 2011, pg. 6). The visual cues and the clear and choice of user flow and information hierarchy allow for clear communication between the user and the website. We see this starting from the home page through to the other pages, the home page provides the user with a simple and clear overview of the website. It provides the following information without the user having to hunt for it: the company’s goal, what they do, industry experts, industry insights, joining the company, partner companies and a footer providing contact information.
 “System response time is the primary complaint for many interactive applications.” (Sridevi 2014, pg. 8). Response time can become an issue if the visual cues aren’t clear which can cause users to become frustrated because they are spending time trying to figure out how to interact with the website or if the website response time is slow. This then creates a bad user experience because the user becomes unpleased with the functionality of the website. The BBD software system response time is quite quick and efficient because the software responds with the desired output or action at a decent speed. The interactions throughout the website are smooth and when the user interacts with the links and text boxes the action input responds with the desired output, which makes the website useable. The interaction design was well thought out because the user can interact with what they need to interact with, with assistance from the visual cues present throughout the website.
-With concerns surrounding ‘dark patterns’ regarding persuasive design in UI/UX, BBD software has acknowledged the accessibility aspect of their website design. At the bottom of the website in their footer, they have an accessibility hyperlink, on the accessibility the page addresses the website’s accessibility by noting how the website can behave/ what the user should be able to do and how the website is accessible. The page also addresses how the user can request a different format of the website by contacting the company while also providing contact information to the user if they would like to report an accessibility issue with the website. This displays ethical design as it acknowledges the user’s right, promotes inclusivity, and provides the user with a disclaimer section and also takes accountability for any issues that may be present on the website by providing the user with a way to contact them if they come across an issue.
+</p>
+
+<p>With concerns surrounding ‘dark patterns’ regarding persuasive design in UI/UX, BBD software has acknowledged the accessibility aspect of their website design. At the bottom of the website in their footer, they have an accessibility hyperlink, on the accessibility the page addresses the website’s accessibility by noting how the website can behave/ what the user should be able to do and how the website is accessible. The page also addresses how the user can request a different format of the website by contacting the company while also providing contact information to the user if they would like to report an accessibility issue with the website. This displays ethical design as it acknowledges the user’s right, promotes inclusivity, and provides the user with a disclaimer section and also takes accountability for any issues that may be present on the website by providing the user with a way to contact them if they come across an issue.
 As the tech space continues to grow and design methods adapt to the change, we still have a long way to go in terms of implementing ethical design practices in current software that society engages with. Research continues as designers discover new ways to take note of ethical design processes that work in favour of persuasion rather than manipulation (‘dark patterns’). In Ahuja and Jyoti’s article, they explore a framework for ethics education in persuasive design. They conclude their article by stating that “The framework presents conceptions of autonomy, such as those of independence and authenticity, that are not naturally consistent with the way that design ethics and design responsibility are currently understood. We contend that expanding the scope of design responsibility is necessary because persuasive design inevitably affects users' autonomy in these several "senses." Within design education, the framework incorporates a wider and more comprehensive variety of autonomy concerns.” (Ahuja and Jyoti 2011, pg. 7).
+</p>
 
 <h2>References:</h2>
+
 <article>
-Ahuja, S. and Kumar, J., 2022. A framework for ethics education in persuasive UX design. In International Conference on Interfaces and Human Computer Interaction
+<p>Ahuja, S. and Kumar, J., 2022. A framework for ethics education in persuasive UX design. In International Conference on Interfaces and Human Computer Interaction</p>
 
-BBD Software, 2024, BBD software development, accessed 6 April 2024, (https://bbdsoftware.com )
+<p>BBD Software, 2024, BBD software development, accessed 6 April 2024, (https://bbdsoftware.com )</p>
 
-Geyser, H. (2024) ‘Interaction Design’, [Lecture], WSOA3028A: Interactive Media 3A, University of the Witwatersrand, 27 February 2024.
+<p>Geyser, H. (2024) ‘Interaction Design’, [Lecture], WSOA3028A: Interactive Media 3A, University of the Witwatersrand, 27 February 2024.</p>
 
-Goethe, O., Salehzadeh Niksirat, K., Hirskyj-Douglas, I., Sun, H., Law, E.L.C. and Ren, X., 2019. From UX to engagement: connecting theory and practice, addressing ethics and diversity. In Universal Access in Human-Computer Interaction. Theory, Methods and Tools: 13th International Conference, UAHCI 2019, Held as Part of the 21st HCI International Conference, HCII 2019, Orlando, FL, USA, July 26–31, 2019, Proceedings, Part I 21 (pp. 91-99). Springer International Publishing
+<p>Goethe, O., Salehzadeh Niksirat, K., Hirskyj-Douglas, I., Sun, H., Law, E.L.C. and Ren, X., 2019. From UX to engagement: connecting theory and practice, addressing ethics and diversity. In Universal Access in Human-Computer Interaction. Theory, Methods and Tools: 13th International Conference, UAHCI 2019, Held as Part of the 21st HCI International Conference, HCII 2019, Orlando, FL, USA, July 26–31, 2019, Proceedings, Part I 21 (pp. 91-99). Springer International Publishing</p>
 
-Hsu, C.C., 2011. Factors affecting the webpage’s visual interface design and style. Procedia Computer Science, 3, pp.1315-1320
+<p>Hsu, C.C., 2011. Factors affecting the webpage’s visual interface design and style. Procedia Computer Science, 3, pp.1315-1320</p>
 
-Sánchez Chamorro, L., Bongard-Blanchy, K. and Koenig, V., 2023, July. Ethical Tensions in UX Design Practice: Exploring the Fine Line Between Persuasion and Manipulation in Online Interfaces. In Proceedings of the 2023 ACM Designing Interactive Systems Conference (pp. 2408-2422).
+<p>Sánchez Chamorro, L., Bongard-Blanchy, K. and Koenig, V., 2023, July. Ethical Tensions in UX Design Practice: Exploring the Fine Line Between Persuasion and Manipulation in Online Interfaces. In Proceedings of the 2023 ACM Designing Interactive Systems Conference (pp. 2408-2422).</p>
 
-Sridevi, S., 2014. User interface design. International Journal of Computer Science and Information Technology Research, 2(2), pp.415-426.
+<p>Sridevi, S., 2014. User interface design. International Journal of Computer Science and Information Technology Research, 2(2), pp.415-426.
 
 </article>
 
-    </article>
 </body>
 </html>
