adding a footer to pages

--- a/HTML/design.html
+++ b/HTML/design.html
@@ -108,5 +108,14 @@
         
         </article>
        </section>
+
+       <footer>
+        <p> Contact me:</p>
+        <p>Phone number: xxxxxxx</p>
+         <p> Github: Fefeswork</p>
+         <p> Linkdin: Ofentse Magabeane</p>
+         <p>Email: ofentse.magabeane@gmail.com</p>
+     </footer>
+     
 </body>
 </html>
