--- a/HTML/essays.html
+++ b/HTML/essays.html
@@ -70,5 +70,13 @@ As the tech space continues to grow and design methods adapt to the change, we s
 
 </article>
 
+<footer>
+    <p> Contact me:</p>
+    <p>Phone number: xxxxxxx</p>
+     <p> Github: Fefeswork</p>
+     <p> Linkdin: Ofentse Magabeane</p>
+     <p>Email: ofentse.magabeane@gmail.com</p>
+ </footer>
+ 
 </body>
 </html>
