--- a/HTML/portfolio.html
+++ b/HTML/portfolio.html
@@ -21,10 +21,18 @@
              <!--The code below is a container for all the hyperlink
     - reference: menu.js-->
         </nav>
-        
+
         <h1> Portfolio: </h1>
        <p> Content loading I guess...</p>
     </header>
 
+    <footer>
+        <p> Contact me:</p>
+        <p>Phone number: xxxxxxx</p>
+         <p> Github: Fefeswork</p>
+         <p> Linkdin: Ofentse Magabeane</p>
+         <p>Email: ofentse.magabeane@gmail.com</p>
+     </footer>
+     
 </body>
 </html>
