--- a/index.html
+++ b/index.html
@@ -40,15 +40,11 @@
             </p>
             
         <footer>
-            Contact me:
-            <br>
-            Phone number: xxxxxxx
-            <br>
-            Github: Fefeswork
-            <br>
-            Linkdin: Ofentse Magabeane
-            <br>
-            Email: ofentse.magabeane@gmail.com
+           <p> Contact me:</p>
+           <p>Phone number: xxxxxxx</p>
+            <p> Github: Fefeswork</p>
+            <p> Linkdin: Ofentse Magabeane</p>
+            <p>Email: ofentse.magabeane@gmail.com</p>
         </footer>
     
 </body>
