--- a/HTML/blog.html
+++ b/HTML/blog.html
@@ -41,5 +41,13 @@
     
     </section>
 
+    <footer>
+        <p> Contact me:</p>
+        <p>Phone number: xxxxxxx</p>
+         <p> Github: Fefeswork</p>
+         <p> Linkdin: Ofentse Magabeane</p>
+         <p>Email: ofentse.magabeane@gmail.com</p>
+     </footer>
+     
 </body>
 </html>
