referencing blog JS script

--- a/HTML/blog.html
+++ b/HTML/blog.html
@@ -11,6 +11,8 @@
     <script type="module"> import { initialise } from "../JS/menu.js"
         initialise("Home") </script>
 
+<script src = "../JS/blognav.js"></script>
+
 </head>
 <body>
 
