--- a/HTML/profile.html
+++ b/HTML/profile.html
@@ -29,10 +29,10 @@
         <img src="" style="width: 80%" />
 
         <article>
-            Heyyy there!! I’m Ofentse Magabeane but I like to go by Fefe
+            <p>Heyyy there!! I’m Ofentse Magabeane but I like to go by Fefe
             I am a game designer, and web developer- I eat, breathe, and sleep UI/UX. 
             In short, I like making things look pretty but also functional. 
-            Did I mention I’m a stellar athlete too?
+            Did I mention I’m a stellar athlete too?</p>
 
         </article>
         
@@ -53,7 +53,7 @@
          <p> Linkdin: Ofentse Magabeane</p>
          <p>Email: ofentse.magabeane@gmail.com</p>
      </footer>
-     
+
 
     <script src="../JS/onclick.js"></script>
 </body>
