update web name

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     
     <!--This frist section is for the heading of the website-->
     
-        <h1>PORTFOLIO WEBSITE</h1>
+        <h1>FEFE'S PORTFOLIO WEBSITE</h1>
 
         <p>
             Welcome to my website and stuff yeah im not the coolest person, but hopefully you like this skeleton of a website. 
