--- a/HTML/blog.html
+++ b/HTML/blog.html
@@ -9,7 +9,7 @@
     <title>Blog</title>
 
     <script type="module"> import { initialise } from "../JS/menu.js"
-        initialise("Home") </script>
+        initialise("Blog") </script>
 
 <script src = "../JS/blognav.js"></script>
 
