--- a/HTML/profile.html
+++ b/HTML/profile.html
@@ -11,7 +11,7 @@
 
     <script type="module">
         import { initialise } from "../JS/menu.js"
-        initialise("Home");
+        initialise("Profile");
         </script>
 </head>
 <body>
