--- a/HTML/profile.html
+++ b/HTML/profile.html
@@ -26,7 +26,7 @@
 
         <h1>  Fefe's Profile</h1>
 
-        <img src="/IMGS/IMG-Me.png" style="width: 30%"  />
+        <img src="./IMGS/IMG-Me.png" alt= "Image of me" style="width: 30%"  />
         
 
         <article>
