profile fun fact generator update

--- a/HTML/profile.html
+++ b/HTML/profile.html
@@ -15,8 +15,7 @@
         initialise("Profile");
         </script>
 
-        <!--The 'script' ref is to refeernce the dun dact generator-->
-        <script src="../JS/aboutme.js"></script>
+        
 </head>
 <body>
     <header>
@@ -48,10 +47,8 @@
         
         <strong><p> What else about me??</p></strong>
 
-        <div id="fact-container">
-            <p id="fact-text">Click the button to generate a random fact</p>
-            <button id="generate-btn">What do you like Fefe?</button>
-        </div>
+            <p id="fact-text">...</p>
+            <button id="generate-btn">Well,I like...</button>
 
     </section>
 
@@ -65,6 +62,8 @@
      </footer>
 
 
-    <script src="../JS/onclick.js"></script>
+    <!--The 'script' ref is to refeernce the dun dact generator-->
+    <script src="../JS/aboutme.js"></script>
+
 </body>
 </html>
