--- a/HTML/profile.html
+++ b/HTML/profile.html
@@ -48,7 +48,7 @@
         <strong><p> What else about me??</p></strong>
 
             <p id="fact-text">...</p>
-            <button id="generate-btn">Well,I like...</button>
+            <button id="button">Well,I like...</button>
 
     </section>
 
