--- a/HTML/profile.html
+++ b/HTML/profile.html
@@ -29,7 +29,7 @@
 
         <h1>  Fefe's Profile</h1>
 
-        <img src="../IMGS/IMG-Me.PNG" alt= "Image of me" style="width: 10%"  />
+        <img src="../IMGS/IMG-Me.PNG" alt= "Image of me" width="300" height="400">
         
 
         <article>
