bbd image update

--- a/HTML/essays.html
+++ b/HTML/essays.html
@@ -39,7 +39,7 @@ A website that will be analysed is the BBD software company website. BBD Softwar
  The BBD Software website does a great job in communicating visual cues to direct the user on how the website works while also allowing the user to explore the website how they would like to, giving them some autonomy, an example of this is the navigation on the home page. Users have options to choose from in terms of navigating the different pages, visual cues we can see are the hyperlink colour changing when you hover them and the mouse cursor changing to show that you can click on it:
 </p>
 
- <img src="./IMGS/Screenshot (24).png" alt= "Screenshot of BBD web" style="width: 80%" />
+ <img src="../IMGS/Screenshot (24).png" alt= "Screenshot of BBD web" style="width: 80%" />
 
 <p>
  The figure above the two screenshots of how the navigation behaves: in the first screenshot we see drop-down menus which act as a visual cue that the user can use to navigate that section, they would not have to click the ‘What we do’ hyperlink to eventually get to what they are looking for. Another way it behaves is the user can directly click on the hyperlink. The ‘contact’ link does not present a drop-down meaning that the user would have to click the link to go to the explore page.
