--- a/HTML/Blogs/b1.html
+++ b/HTML/Blogs/b1.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog Post 1</title>
 
-    <link rel="stylesheet" href="" />
-    <link rel="stylesheet" href="" />
+    
+    <script src = "../JS/blognav.js"></script>
 </head>
 <body>
     <header>
