testing blog nav again

--- a/HTML/blog.html
+++ b/HTML/blog.html
@@ -11,7 +11,8 @@
     <script type="module"> import { initialise } from "../JS/menu.js"
         initialise("Blog") </script>
 
-<script src = "../JS/blognav.js"></script>
+<script type="module">import { blogMenu } from "../JS/blognav.js" 
+    blogMenu()</script>
 
 </head>
 <body>
@@ -30,7 +31,7 @@
     make sure to like wirte a bunch of stuff and words blah blah blah.
         </p>
      
-        <nav id="blogsec">
+        <nav id="menu">
 
         </nav>
       
