--- a/HTML/blog.html
+++ b/HTML/blog.html
@@ -25,7 +25,7 @@
 
     <section>
 
-        <h1>Blogs</h1>
+        <h1>Blog Posts:</h1>
         <p>
     Blog posts for the website will go here and stuff.
     make sure to like wirte a bunch of stuff and words blah blah blah.
