i dont got it :( - testing again

--- a/HTML/Blogs/b1.html
+++ b/HTML/Blogs/b1.html
@@ -7,7 +7,9 @@
     <title>Blog Post 1</title>
 
     
-    <script src = "../JS/blognav.js"></script>
+    <script type="module">import { blogMenu } from "../JS/blognav.js" 
+        blogMenu()</script>
+        
 </head>
 <body>
     <header>
