blog post nav fixed

--- a/HTML/Blogs/b6.html
+++ b/HTML/Blogs/b6.html
@@ -8,7 +8,7 @@
 
     
     <script type="module">
-        import { initialise } from "../JS/menu.js"
+        import { initialise } from "../../JS/menu.js"
         initialise("Blog");
         </script>
 
