--- a/HTML/Blogs/b1.html
+++ b/HTML/Blogs/b1.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog Post 1</title>
 
-    <script type="module"> import { initialise } from "../JS/menu.js"
-        initialise("Blog") </script>
-
-
+    <script type="module">
+        import { initialise } from "../../JS/menu.js"
+        initialise("Blog");
+        </script>
 </head>
 <body>
     <header>
