--- a/HTML/Blogs/b2.html
+++ b/HTML/Blogs/b2.html
@@ -7,8 +7,8 @@
     <title>Blog Post 2</title>
 
     <script type="module">
-        import { initialise } from "../JS/menu.js"
-        initialise("");
+        import { initialise } from "../../JS/menu.js"
+        initialise("Blog");
         </script>
     
 </head>
