--- a/HTML/portfolio.html
+++ b/HTML/portfolio.html
@@ -13,6 +13,8 @@
         initialise("Portfolio");
         </script>
 
+        <script src="../JS/onclick.js"></script>
+
 </head>
 <body>
     <header>
@@ -22,9 +24,15 @@
     - reference: menu.js-->
         </nav>
 
-        <h1> Portfolio: </h1>
-       <p> Content loading I guess...</p>
     </header>
+
+    <h1> Portfolio: </h1>
+    <p> Content loading... buuuuuttt you can make BMO happy by clicking on them!</p>
+
+    <p>
+        <img alt="" src="/IMGS/sadbmo.jpg" 
+        width="500" height="500" id="imgClickAndChange" onclick="changeImage()"/>
+    </p>
 
     <footer>
         <p> Contact me:</p>
