--- a/HTML/portfolio.html
+++ b/HTML/portfolio.html
@@ -30,7 +30,7 @@
     <p> Content loading... buuuuuttt you can make BMO happy by clicking on them!</p>
 
     <p>
-        <img alt="" src="./IMGS/sadbmo.jpg" 
+        <img alt="" src="../IMGS/sadbmo.jpg" 
         width="500" height="500" id="imgClickAndChange" onclick="changeImage()"/>
     </p>
 
