update blogs and homepage wireframe

--- a/HTML/Blogs/b6.html
+++ b/HTML/Blogs/b6.html
@@ -28,15 +28,25 @@
         <h1>BLOG POST 6: Ethical Dilemmas in Software Engineering</h1>
 
         <article>
-            <p>Software engineers work in a fast-paced field where they must come up with creative solutions to challenging issues. However, moral issues can occasionally be neglected in the rush for efficiency and advancement. When software engineers must make morally difficult judgments, they must strike a balance between conflicting interests and values. This is when ethical issues in software engineering occur. Let's examine some typical moral conundrums that software developers encounter and how they could resolve them.</p>
+            <p>Software engineers work in a fast-paced field where they must come up with creative solutions to challenging issues.
+                 However, moral issues can occasionally be neglected in the rush for efficiency and advancement. 
+                 When software engineers must make morally difficult judgments, they must strike a balance between conflicting interests and values. 
+                 This is when ethical issues in software engineering occur. Here are some typical moral conundrums that software developers encounter and how they could resolve them.</p>
 
 <strong><p>Privacy vs. Data Collection:</p></strong>
 
-<p>One of the most urgent ethical issues in software engineering is the collection and use of user data. On the one hand, gathering user data can improve the user experience and enable targeted advertising. On the other hand, it raises worries about privacy violations and the potential exploitation of personal information. Software programmers must carefully balance the advantages of data collecting with the possible hazards to user privacy and autonomy. Implementing strong data protection mechanisms, obtaining user agreement, and being open about data usage can assist in alleviating ethical concerns in this area. </p>
+<p>One of the most urgent ethical issues in software engineering is the collection and use of user data. 
+    On the one hand, gathering user data can improve the user experience and enable targeted advertising.
+    On the other hand, it raises worries about privacy violations and the potential exploitation of personal information. 
+    Software programmers must carefully balance the advantages of data collecting with the possible hazards to user privacy and autonomy. 
+    Implementing strong data protection mechanisms, obtaining user agreement, and being open about data usage can assist in alleviating ethical concerns in this area. </p>
 
 <strong><p>Bias in Algorithmic Decision-Making:</p></strong>
 
-<p>Algorithmic decision-making systems are increasingly being employed in a variety of fields, including recruiting and finance, criminal justice, and healthcare. However, these algorithms are not immune to prejudice, and they reflect the biases in the data used to train them. Biased algorithms prolong or exacerbate existing inequities and injustice, posing ethical concerns. Software engineers are responsible for addressing prejudice in algorithmic systems through techniques such as bias detection, data pretreatment, and algorithmic fairness measures.</p>
+<p>Algorithmic decision-making systems are increasingly being employed in a variety of fields, including recruiting and finance, criminal justice, and healthcare.
+    However, these algorithms are not immune to prejudice, and they reflect the biases in the data used to train them. 
+    Biased algorithms prolong or exacerbate existing inequities and injustice, posing ethical concerns.
+    Software engineers are responsible for addressing prejudice in algorithmic systems through techniques such as bias detection, data pretreatment, and algorithmic fairness measures.</p>
 
         </article>
 
