--- a/HTML/design.html
+++ b/HTML/design.html
@@ -109,7 +109,7 @@
     
         <h4>Wireframes:</h4>
 
-        <img src="../IMGS/Assignment 1- HTML website(Design).png"  alt= " Homepage wireframe" width="500" height="500">
+        <img src="../IMGS/Homepg.png"  alt= " Homepage wireframe" width="500" height="500">
         <img src="../IMGS/Blogspg.png"  alt= "Blog wireframe" width="500" height="500">
         <img src="../IMGS/Designpg.png"  alt= "Design Wireframe" width="500" height="500">
         <img src="../IMGS/Portfoliopg.png"  alt= "Portfolio wireframe"width="500" height="500">
